# pwizard

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: bump_version.py
src/pwizard/: __init__.py  __main__.py
src/pwizard/generate/: __init__.py  __main__.py  cmd.py  types.py  utils.py
src/pwizard/generate/templates/: main.py.tmpl
src/pwizard/migrate/: __init__.py  __main__.py  cmd.py  generate.py  hooks.py  internal.py  migration.py  warnings.py
src/pwizard/migrate/cmd/: __init__.py  new.py  run.py
src/pwizard/migrate/templates/: migration.py.tmpl  migration.sql.tmpl
src/pwizard/utils/: catch.py  duration.py
tests/: test_generator.py  test_migrations.py
tests/migrations_1/: mig2.sql  mig3.sql
tests/migrations_2/: mig1.sql  mig4.sql
tests/migrations_3/: mig2.sql
tests/schemas/: a_bit_of_everything.sql  booktest.sql  customtype.sql
