[project]
name = "pwizard"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominic Price",email = "dominicprice@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "peewee (>=3.18.3,<4.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "sqlparse (>=0.5.4,<0.6.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "pwizard", from = "src"}]

[tool.poetry.scripts]
generate = "pwizard.generate.__main__:main"
migrate = "pwizard.migrate.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
mypy = "^1.19.0"
pytest = "^9.0.2"
types-peewee = "^3.18.3.20251105"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
